--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "expo": "~51.0.26",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -16,7 +18,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.5.3",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "jest": "^29.7.0",
+    "jest-expo": "^51.0.3",
     "typescript": "^5.1.3"
   },
   "private": true
